# hits-event-board

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/api/: mappers.rs  mod.rs  models.rs  requests.rs
backend/src/api/models/: auth.rs  company.rs  event.rs  manager.rs  mod.rs  registration.rs
backend/src/api/requests/: company.rs  event.rs  login.rs  manager_register.rs  mod.rs  refresh.rs  student_register.rs
backend/src/auth/: claims.rs  extractor.rs  mod.rs  roles.rs
backend/src/domain/: mod.rs  types.rs
backend/src/domain/entities/: company.rs  company_row.rs  event.rs  event_row.rs  manager.rs  manager_row.rs  mod.rs  registration.rs  registration_row.rs  student_row.rs  user.rs  user_row.rs
backend/src/domain/mappers/: company.rs  event.rs  manager.rs  mod.rs
backend/src/domain/services/: company_service.rs  event_service.rs  mod.rs  registration_service.rs  user_service.rs
backend/src/feature/: mod.rs
backend/src/infra/: db.rs  errors.rs  idempotency.rs  mod.rs
backend/src/infra/google/: calendar.rs  mod.rs  oauth.rs
backend/src/infra/jobs/: worker.rs
backend/src/infra/repositories/: company.rs  company_repo.rs  event_repo.rs  manager_repo.rs  mod.rs  registration_repo.rs  telegram_code_repo.rs  telegram_repo.rs  types.rs  user_repo.rs
backend/src/infra/security/: jwt.rs  mod.rs  password.rs  rbac.rs  session.rs
backend/src/infra/telegram/: bot.rs  mod.rs  webhook_auth.rs
backend/src/middleware/: idempotency.rs  json_errors.rs  mod.rs  rbac.rs  request_id.rs
backend/src/models/: event.rs  mod.rs  token.rs
backend/src/requests/: mod.rs  refresh_token.rs  student_register.rs
backend/src/routes/: auth.rs  companies.rs  dean_student.rs  events.rs  health.rs  me.rs  mod.rs  oauth.rs  telegram.rs  users.rs
backend/src/security/: mod.rs  password.rs  password_policy.rs  tokens.rs
backend/src/services/: auth_service.rs  company_service.rs  event_service.rs  manager_service.rs  mod.rs  registration_service.rs  telegram_service.rs  user_service.rs
backend/src/utils/: codegen.rs  mod.rs
bot/: Cargo.toml
bot/src/: api.rs  app.rs  conversation.rs  dto.rs  main.rs  util.rs
migrations/: 20250906092729_init_extensions.sql  20250906092857_types.sql  20250906093014_users.sql  20250906094532_users_roles_tpt.sql  20250906094651_companies.sql  20250906094729_events.sql  20250906094811_event_registrations.sql  20250907123346_update_events_capacity_and_published_flag.sql  20250907125328_update_registration_add_status_and_gcal.sql  20250907125457_goole_and_telegram.sql  20250907125629_idempotency_keys.sql  20250907125804_update_company_add_more_prop.sql  20250907125917_init_triggers.sql  20250909194126_add_telegram_link_codes.sql  20250911082459_add_status_for_students.sql
web/: Cargo.toml
web/public/: admin.html  admin.js  app.js  index.html  login.html  main.js  style.css  styles.css
web/src/: main.rs
