[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8.4", features = ["macros", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
http = "1.3.1"

uuid = { version = "1", features = ["v4", "serde"] }

time = { version = "0.3", features = ["macros", "serde-human-readable"] }
thiserror = "2.0.16"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
sha2 = "0.10.9"
regex = "1.11.2"
jsonwebtoken = "9.3.1"
anyhow = "1.0.99"

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"]
