[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros"] }
time = { version = "0.3", features = ["macros", "serde", "parsing", "formatting"] }
thiserror = "1"
anyhow = "1"
validator = "0.18"
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"

[dev-dependencies]
insta = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
